Создать базу данных. Реализовать DAO. Покрыть тестами